# GPTQ-Pro

./: .dockerignore  BRANCH_CLEANUP.md  CREDITS.md  Dockerfile  MANIFEST.in  Project.md  README.md  environment.yml  progress.md  pyproject.toml  setup.py
.github/workflows/: diagnose-ruff.yml  gptq-pro-cuda-compile.yml  kernel-format-diagnostics.yml
chat/: README.md  chat.py  run.sh
docs/: ASSESSMENT_AND_ROADMAP.md  KERNEL_V3.md  QWEN35_QWEN36.md  qwen35_vllm_comparison.md  qwen35_vllm_launch.md
examples/benchmark/: perplexity.py
gptqmodel/: __init__.py  extension.py
gptqmodel/adapter/: adapter.py
gptqmodel/looper/: dequantize_processor.py  gptq_processor.py  module_looper.py  stage_layer.py  stage_subset.py
gptqmodel/models/: auto.py  base.py  loader.py  writer.py
gptqmodel/models/definitions/: __init__.py  _qwen3_5_vision.py  gemma2.py  qwen3_5.py  qwen3_5_moe.py  qwen3_5_moe_lm_only.py  qwen3_5_moe_text.py  qwen3_5_text.py  qwen3_next.py
gptqmodel/nn_modules/qlinear/: __init__.py  gptq_pro.py  lookahead.py
gptqmodel/quantization/: __init__.py  config.py  gptq.py  protocol.py  quantizer.py
gptqmodel/utils/: backend.py  gptq_pro.py  hf.py  hub.py  importer.py  jit_compile_baselines.py  model.py
gptqmodel_ext/gptq_pro/: gptq_pro_kernel.cu  gptq_pro_kernel.cuh  gptq_pro_kernel_v3.cu  gptq_pro_torch.cpp  gptq_pro_validate.cu
scripts/: benchmark_gptq_pro.py  benchmark_gptq_pro_kernel.py  nvml_visible_shim.c  quant_qwen36_obliterated_gptqpro.py  quant_qwen3_5_moe.py  run_gptq_pro_validate.sh  serve_vllm_qwen35.py  sitecustomize.py  validate_gptq_pro_ampere.sh  vllm_qwen35_shim.py
tests/: test_extension_registry.py  test_failsafe.py  test_gptq_pro.py  test_hessian.py  test_hf_config_autofix.py  test_qwen3_5_batching.py  test_qwen3_6_support.py  test_repository_consistency.py  test_serialization.py  test_serve_vllm_qwen35.py
tests/kernels/: test_gptq_pro_ampere_pipeline.py  test_selection.py
tests/models/: test_qwen3_5_invariants.py  test_qwen3_5_vision.py
tests/qcfg/: test_failsafe_meta.py  test_gptq_pro.py  test_gptq_pro_profile.py
(+1 files in other folders)
