[build-system]
requires = [
    "setuptools>=77.0.1,<83",
]
build-backend = "setuptools.build_meta"

[project]
# The distribution and import names intentionally remain GPTQModel/gptqmodel for
# checkpoint and API compatibility with the upstream project.
name = "GPTQModel"
dynamic = ["version", "dependencies"]
description = "Experimental single-backend GPTQ INT4 quantization and inference fork with an Ampere-first CUDA kernel."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "ModelCloud", email = "qubitium@modelcloud.ai" },
]
keywords = [
    "gptq",
    "int4",
    "cuda",
    "ampere",
    "quantization",
    "large-language-models",
    "transformers",
    "qwen",
    "moe",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/groxaxo/GPTQ-Pro"
Repository = "https://github.com/groxaxo/GPTQ-Pro"
Issues = "https://github.com/groxaxo/GPTQ-Pro/issues"
Upstream = "https://github.com/ModelCloud/GPTQModel"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-timeout>=2.3.1",
    "parameterized",
]
quality = [
    "ruff==0.13.0",
]
hf = [
    "optimum>=1.21.2",
]
eval = [
    "Evalution",
]
triton = [
    "triton>=3.4.0",
]
openai = [
    "uvicorn",
    "fastapi",
    "pydantic",
]

[tool.uv]
torch-backend = "auto"
